--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-  "name" : "dodgepudding/wechat-php-sdk",
-  "description" : "the wechat api library without framework dependency",
+  "name" : "zhqagp/wechat-php-sdk",
+  "description" : "the wechat api library of thinkphp5 without framework dependency,it is fork from https://github.com/dodgepudding/wechat-php-sdk",
   "version" : "1.1",
   "require" : {
     "php" : ">=5.1.0"
@@ -11,16 +11,19 @@
   }, {
     "name" : "binsee",
     "email" : "binsee@163.com"
+  }, {
+    "name" : "zhqagp",
+    "email" : "zhqagp@163.com"
   } ],
   "keywords" : [ "wechat", "weixin", "thinkphp", "sample" ],
   "support" : {
-    "issues" : "https://github.com/dodgepudding/wechat-php-sdk/issues",
-    "wiki" : "https://github.com/dodgepudding/wechat-php-sdk/wiki",
-    "source" : "https://github.com/dodgepudding/wechat-php-sdk"
+    "issues" : "https://github.com/zhqagp/wechat-php-sdk/issues",
+    "wiki" : "https://github.com/zhqagp/wechat-php-sdk/wiki",
+    "source" : "https://github.com/zhqagp/wechat-php-sdk"
   },
   "autoload" : {
     "psr-4" : {
-      "dodgepudding\\wechat\\sdk\\" : ""
+      "zhqagp\\wechat\\" : ""
     }
   },
   "type" : "library",
