--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "email" : "binsee@163.com"
   }, {
     "name" : "zhqagp",
-    "email" : "zhqagp@.com"
+    "email" : "zhqagp@gmail.com"
   } ],
   "keywords" : [ "wechat", "weixin", "thinkphp", "sample" ],
   "support" : {
